# GrowthikOS-Digital-Marketing-Platform

./: .gitignore  Digital-Marketing-Platform-Complete-Roadmap.md  README.md  digital-marketing-platform.code-workspace  package-lock.json  package.json
.agents/: AGENTS.md
backend/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 9150bc870b90_initial_migration.py
backend/app/: __init__.py  main.py
backend/app/api/v1/: __init__.py  api.py
backend/app/api/v1/endpoints/: __init__.py  analytics.py  auth.py  users.py
backend/app/core/: config.py  security.py
backend/app/database/: __init__.py  base.py  session.py
backend/app/integrations/: __init__.py
backend/app/middleware/: logging.py
backend/app/modules/: __init__.py
backend/app/modules/auth/: schemas.py
backend/app/modules/organizations/: crud.py  models.py  schemas.py
backend/app/modules/projects/: models.py
backend/app/modules/users/: __init__.py  crud.py  models.py  schemas.py
backend/app/utils/: helpers.py
backend/app/workers/: __init__.py  celery_app.py
backend/scripts/: seed.py  start_dev.bat  start_dev.sh
backend/tests/: conftest.py
backend/tests/unit/: test_auth.py
frontend/: README.md  next.config.ts  package-lock.json  package.json  proxy.ts  tsconfig.json
frontend/app/: error.tsx  globals.css  layout.tsx  loading.tsx  not-found.tsx
frontend/components/: README.md
frontend/docs/: README.md
frontend/features/: README.md
frontend/i18n/: config.ts  format.ts  seo.ts  (+2 more)
(+93 files in other folders)
